<resources>
    <string name="app_name">My Second App</string>
    <string name="heading_1">KODECAMP</string>
    <string name="heading_2">ANDROID</string>
    <string name="heading_3">DEVELOPER</string>
    <string name="see_More_Button">See More</string>
    <string name="kaddd_image">developer_image</string>
    <string name="kadd_image">developer_image1</string>
    <string name="i_am_passionate_driven_and_committed_to_finish_kodecamp_as_one_of_the_best">I am passionate, driven \n and committed to finish \n Kodecamp as one of the \n best.</string>

</resources>